--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.487.0",
+    "mailtrap": "^4.0.0",
     "next": "15.2.3",
     "next-auth": "^5.0.0-beta.25",
     "nodemailer": "^6.10.0",
