--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@conform-to/react": "^1.3.0",
     "@conform-to/zod": "^1.3.0",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -32,6 +33,7 @@
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
